replaced ArrayList on LinkedList